<resources>
    <string name="app_name">프리지</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--New-->
    <!--리스트 이름-->
    <string name="fridgeList">냉장고 리스트</string>
    <string name="myFridge">내 냉장고</string>
    <string name="shoppingList">장보기 리스트</string>
    <string name="communityList">커뮤니티</string>

    <!--식품-->
    <string name="foodName">식품 이름</string>
    <string name="foodDate">유통 기한</string>

    <!--냉장고 목록-->
    <string name="myFridgeList">냉장고 이름</string>

    <!--내 냉장고-->
    <string name="cool">냉장</string>
    <string name="freeze">냉동</string>

    <!--회원가입/로그인-->
    <string name="signUp">회원가입</string>
    <string name="signUpforGoogle">Google 로그인</string>
    <string name="signIn">로그인</string>
    <string name="moveToSignUp">회원가입 하기</string>

    <!--추가하기-->
    <string name="fridgeList_add">냉장고 등록하기</string>
    <string name="add">추가하기</string>
    <string name="myFridge_Add">식품 등록하기</string>
    <string name="plus">+</string>
    <string name="shopping_add">체크리스트 추가하기</string>

    <!--안내문-->
    <string name="fridgeList_add_info">냉장고의 이름을 적어주세요</string>
    <string name="shoppingList_add_info">장바구니 식품을 적어주세요</string>
    <string name="community_search_info">검색어를 입력하세요</string>
    <!---->

    <!--editText hint-->
    <string name="ex_foodName">예) 계란</string>

    <!--식품-->
    <string name="groceryList">장보기 리스트</string>
    <string name="addFood">식품추가</string>

    <!--식품 추가-->
    <string name="fridgeWay_cool">냉장</string>
    <string name="fridgeWay_freeze">냉동</string>
    <string name="fridgeWay_etc">기타</string>
    <!--    <string name="foodName">식품명</string>-->
    <string name="exDate">유통기한</string>
    <string name="quantity">수량</string>


    <!--버튼-->
    <string name="submit">확인</string>
    <string name="cancel">취소</string>
    <string name="barcode">바코드 인식</string>
    <string name="memo">메모작성</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">냉장고 리스트</string>
    <string name="title_dashboard">장보기 리스트</string>
    <string name="title_notifications">커뮤니티</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--장보기 리스트-->
    <string name="itemToBuy">장볼 것</string>

    <!--Cummunity/chatting-->
    <string name="chat_foodname">식품명</string>
    <string name="chat_wantmsg">살래요!</string>
    <string name="chat_sendbtn">보내기</string>
    <string name="chat_myname">내 이름</string>
    <string name="chat_mymsg">내 메세지</string>
    <string name="chat_othername">상대 이름</string>
    <string name="chat_othermsg">상대 메세지</string>
    <string name="chat_time">00:00</string>

    <!--Navigation Drawer-->
    <string name="menu_account">내 정보</string>
    <string name="menu_liked">찜 목록</string>

    <!--내정보-->
    <string name="userSetting">내정보</string>
    <string name="account_nickname">닉네임</string>
    <string name="account_mnickname">Nickname</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_nickname">Nickname</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>


</resources>