<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chat_myname"
        android:textColor="#333333"
        android:layout_marginRight="16dp"
        android:layout_alignParentRight="true"/>

    <TextView
        android:id="@+id/tv_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chat_mymsg"
        android:layout_below="@+id/tv_name"
        android:layout_marginRight="16dp"
        android:layout_alignParentRight="true"
        android:padding="12dp"
        android:maxWidth="250dp"
        android:background="@drawable/chatting_back_mymsgbox"
        android:textColor="@color/frige_green"/>
    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chat_time"
        android:textSize="12sp"
        android:layout_toLeftOf="@+id/tv_msg"
        android:layout_marginRight="8dp"
        android:layout_alignBottom="@id/tv_msg"/>
</RelativeLayout>