<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chat_othername"
        android:textColor="#333333"
        android:layout_marginLeft="16dp"
        android:layout_alignParentLeft="true"/>

    <TextView
        android:id="@+id/tv_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chat_othermsg"
        android:layout_below="@+id/tv_name"
        android:layout_marginLeft="16dp"
        android:layout_alignParentLeft="true"
        android:padding="12dp"
        android:maxWidth="250dp"
        android:background="@drawable/chatting_back_othermsgbox"
        android:textColor="@color/frige_green"/>
    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chat_time"
        android:textSize="12sp"
        android:layout_toRightOf="@+id/tv_msg"
        android:layout_marginLeft="8dp"
        android:layout_alignBottom="@id/tv_msg"/>
</RelativeLayout>