<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddFoodActivity"
    android:layout_gravity="center">
        <!--냉장, 냉동 버튼-->
        <RadioGroup
            android:id="@+id/frigeWay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:padding="10dp">
            <RadioButton
                android:id="@+id/frigeWay_cool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frigeWay_cool"/>
            <RadioButton
                android:id="@+id/frigeWay_freeze"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frigeWay_freeze"/>
            <RadioButton
                android:id="@+id/frigeWay_etc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frigeWay_etc"/>
        </RadioGroup>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center"
    android:padding="10dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foodName"/>
         <EditText
           android:id="@+id/foodName"
           android:layout_width="120dp"
           android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/memo"/>
        <EditText
            android:id="@+id/memo"
            android:layout_width="120dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exDate"/>

            <DatePicker
                android:id="@+id/exDate"
                android:layout_width="149dp"
                android:layout_height="64dp"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity"/>

            <LinearLayout
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="35dp"
                    android:layout_height="wrap_content"
                    android:text="-" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"/>
                <Button
                    android:layout_width="35dp"
                    android:layout_height="wrap_content"
                    android:text="+" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/barcodeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/barcode"
        android:layout_gravity="center"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="40dp">
        <Button
            android:id="@+id/submitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_marginRight="10dp"/>
        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>


</LinearLayout>