<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/frige_yellow"
        android:paddingTop="15dp"
        android:paddingBottom="10dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/foodname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="30dp"
            android:layout_marginLeft="20dp"
            android:text="@string/chat_foodname"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:textSize="25dp"
            android:text="@string/chat_wantmsg"/>
    </LinearLayout>

    <ListView
        android:id = "@+id/chatting_listView"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:weightSum="1">
        <EditText
            android:id="@+id/EditText_chat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/Button_send"
            android:text="@string/chat_sendbtn"
            android:layout_width="80dp"
            android:layout_height="match_parent"/>
    </LinearLayout>

</LinearLayout>