<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="175dp"
        android:gravity="center">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/loginment"

            ></ImageView>

        <ImageView
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:src="@drawable/enterplace"

            ></ImageView>

        <EditText
            android:id="@+id/SignInEmailEditText"
            android:layout_width="280dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:background="@null"
            android:backgroundTint="#A5A5A5"
            android:hint="아이디"
            android:textColor="#172F57"
            android:textColorHint="#172F57"
            android:textSize="15dp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="150dp"
            android:src="@drawable/enterplace"

            ></ImageView>


        <EditText
            android:id="@+id/SignInPasswordEditText"
            android:layout_width="280dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="150dp"
            android:background="@null"
            android:backgroundTint="#A5A5A5"
            android:hint="비밀번호"
            android:inputType="textPassword"
            android:textColor="#172F57"
            android:textColorHint="#172F57"
            android:textSize="15dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/SignInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="230dp"
            android:fontFamily="@font/bmdohyeon"
            android:text="@string/signIn" />

        <Button
            android:id="@+id/MoveToSignUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="300dp"
            android:fontFamily="@font/bmdohyeon"
            android:text="@string/moveToSignUp" />

        <Button
            android:id="@+id/btnSignupforGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="390dp"
            android:fontFamily="@font/bmdohyeon"
            android:text="@string/signUpforGoogle" />

        <ImageButton
            android:id="@+id/btnSignupforKakao"
            android:layout_width="212dp"
            android:layout_height="43dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="450dp"
            android:src="@drawable/kakao_login_large_wide" />


    </FrameLayout>

</RelativeLayout>